# index-import

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  NOTICE  README.md  RELEASING.md  absolute-unit.cpp  azure-pipelines.yml  dump-record.cpp  index-import.cpp  validate-index.cpp
.github/: build-index-import.sh  build-index-store.sh  generate-notes.sh
.github/workflows/: test.yml
tests/: run.sh
tests/clang/: expected.txt
tests/import_only/: expected.txt
tests/multiple/: expected.txt
tests/swiftc/: expected.txt  input.swift
