cmake_minimum_required(VERSION 3.13)
if(COMMAND project)
  project(index-import)
endif()

find_package(Clang CONFIG REQUIRED)

function(add_index_executable execname)
  add_executable("${execname}" "${execname}.cpp")
  target_include_directories("${execname}" SYSTEM PRIVATE ${LLVM_INCLUDE_DIRS} ${CLANG_INCLUDE_DIRS})
  target_compile_features("${execname}" PRIVATE cxx_std_14)
  set_target_properties("${execname}" PROPERTIES CXX_EXTENSIONS OFF)
  target_compile_options("${execname}" PRIVATE -Wall -Wextra -fblocks)
  if(NOT LLVM_ENABLE_RTTI)
    target_compile_options("${execname}" PRIVATE -fno-rtti)
  endif()
  target_link_libraries("${execname}" PRIVATE clangIndex)
  target_link_options("${execname}" PRIVATE -dead_strip)
endfunction()

add_index_executable(index-import)
add_index_executable(absolute-unit)
